syntax = "proto3";

package heartbeat.v1;

service Heartbeat {
	rpc Beat (BeatRequest) returns (BeatResponse);
}

message BeatRequest {
	string sender_name = 1;
}

message BeatResponse {}
